--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,6 @@ html, body {
     background-color: rgba(253, 227, 167, 1); 
 }
 
-::-webkit-scrollbar { 
+/* ::-webkit-scrollbar { 
     display: none; 
-}
+} */
