--- a/src/components/Addemployee/style.css
+++ b/src/components/Addemployee/style.css
@@ -1,7 +1,5 @@
 .overlay1 {
-
     position: absolute;
-  
     width: 100%;
     height: 100%;
     top: 0;
@@ -9,8 +7,8 @@
     right: 0;
     bottom: 0;
     /* background: -webkit-gradient(linear, left top, left bottom, from(rgb(248, 252, 250)), to(rgb(102, 42, 42))) fixed; */
-    z-index: 2;
-    overflow: hidden;
+    /* z-index: 2; */
+    /* overflow: hidden; */
 
     
   }
@@ -19,10 +17,12 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    /* overflow: auto; */
   }
 
   .wrapper2{
 width: 50%;
+min-width: 300px;
 background: rgb(196, 171, 103);
 border-style:solid;
 border-width: 10px;
@@ -38,14 +38,10 @@ display: flex;
     margin: 20px;
       }
       
-          
-      
-
       
           textarea:focus, input:focus{
             outline: none;
             background-color: none;
-            
         }
         .formcontrol{
           width: 90%;
@@ -60,48 +56,7 @@ display: flex;
       margin-top:10px;
       margin-bottom:10px;
         }
-      
-        input::selection{
-          background-color:  transparent;
-        }
-      
-        /* input:-webkit-autofill,
-      input:-webkit-autofill:hover, 
-      input:-webkit-autofill:focus, 
-      input:-webkit-autofill:active  {
-      background-color: transparent;
-      } */
-        
-       input:-webkit-autofill,
-      input:-webkit-autofill:hover, 
-      input:-webkit-autofill:focus,
-      textarea:-webkit-autofill,
-      textarea:-webkit-autofill:hover,
-      textarea:-webkit-autofill:focus,
-      select:-webkit-autofill,
-      select:-webkit-autofill:hover,
-      select:-webkit-autofill:focus {
-        border-top-style: none;
-        border-left-style: none;
-        border-right-style: none;
-        border-bottom-style: solid;
-        border-bottom-width: 1px;
-        background: none;
-        /* -webkit-background-fill-color: rgb(112, 7, 21); */
-        -webkit-text-fill-background-color: rgb(112, 7, 21);
-        /* -webkit-box-shadow: 0 0 0px 0px#000 inset; */
-        transition: background-color 5000s ease-in-out 0s;
-        
-      }
-        ::-moz-selection{
-          background-color:  transparent;
-        } 
-          .formcontrol::-webkit-input-placeholder { color: none; }  /* WebKit, Blink, Edge */
-      
-      .formcontrol:-moz-placeholder { color: none; }  /* Mozilla Firefox 4 to 18 */
-      .formcontrol::-moz-placeholder { color: none; }  /* Mozilla Firefox 19+ */
-      .formcontrol:-ms-input-placeholder { color: none; }  /* Internet Explorer 10-11 */
-      .formcontrol::-ms-input-placeholder { color: none; }  /* Microsoft Edge */
+     
       
       
       
@@ -142,20 +97,19 @@ display: flex;
       
 
       .btnwrap1addemp{
-        justify-content: center;
-        display: flex;
-        margin-bottom: 20px;
+
       color:rgb(248, 241, 241);
-      margin-top: 10px;
           background-color: rgb(230, 97, 9);
-          border-style: none;
+          border-style: solid;
+          border-color:transparent;
           height: 40px;
-          padding-left: 20px;
-          padding-right: 20px;
+          align-items: center;
+          min-width: 100px;
           border-radius: 50px;
-          font-size: 15px;
+      margin-top: 10px;
+
+       
         }
-      
       
       .btnwrap1addemp:focus {
         outline: none !important;
