--- a/src/components/Employees/style.css
+++ b/src/components/Employees/style.css
@@ -15,10 +15,10 @@
       bottom: 0;
       /* background: -webkit-gradient(linear, left top, left bottom, from(rgb(248, 252, 250)), to(rgb(102, 42, 42))) fixed; */
       z-index: 2;
-      cursor: pointer;
+      /* cursor: pointer; */
       transition-delay: 10s;
       transition-timing-function: ease-in;
-      overflow: hidden;
+      /* overflow: hidden; */
       
     }
   
