--- a/src/components/QuestionCard/style.css
+++ b/src/components/QuestionCard/style.css
@@ -1,29 +1,70 @@
-.qcard {
 
-  border-radius: 2px;
-
-  height: 200px;
-  margin: 1rem;
-  position: relative;
-  width: 88%;
-
-  background-color: rgb(233, 206, 171);
-  /* background-color: rgb(139, 39, 86); */
-  box-shadow: 5px 6px 6px rgb(49, 46, 46), 0 3px 3px rgb(59, 58, 58);
-  text-align: left;
-  padding: 20px;
-  border-radius: 50px;
-}
-
+input::selection{
+          background-color:  transparent;
+        } 
+      
+         input:-webkit-autofill,
+      input:-webkit-autofill:hover, 
+      input:-webkit-autofill:focus, 
+      input:-webkit-autofill:active  {
+      background-color: transparent;
+      } 
+        
+       input:-webkit-autofill,
+      input:-webkit-autofill:hover, 
+      input:-webkit-autofill:focus,
+      textarea:-webkit-autofill,
+      textarea:-webkit-autofill:hover,
+      textarea:-webkit-autofill:focus,
+      select:-webkit-autofill,
+      select:-webkit-autofill:hover,
+      select:-webkit-autofill:focus {
+        border-top-style: none;
+        border-left-style: none;
+        border-right-style: none;
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
+         background: none; 
+        /* -webkit-background-fill-color: rgb(112, 7, 21); */
+        -webkit-text-fill-background-color: rgb(112, 7, 21);
+        /* -webkit-box-shadow: 0 0 0px 0px#000 inset; */
+        transition: background-color 5000s ease-in-out 0s;
+        
+      }
+         ::-moz-selection{
+          background-color:  transparent;
+        }  
+          .formcontrol::-webkit-input-placeholder { color: none; }  /* WebKit, Blink, Edge */
+      
+      .formcontrol:-moz-placeholder { color: none; }  /* Mozilla Firefox 4 to 18 */
+      .formcontrol::-moz-placeholder { color: none; }  /* Mozilla Firefox 19+ */
+      .formcontrol:-ms-input-placeholder { color: none; }  /* Internet Explorer 10-11 */
+      .formcontrol::-ms-input-placeholder { color: none; }  /* Microsoft Edge */
+      
 .submitAnswer {
 
   border-radius: 50px;
-  background-color: transparent;
-  border-style: solid;
-  border-width: 1px;
-  border-color: black;
+  background-color: steelblue;
+  color: white;
+  border-style: none;
+  border-width: 0px;
+  border-color: transparent;
+  height: 30px;
+  font-size: .8rem;
+  box-shadow: 2px 1px 2px rgb(49, 46, 46), 0 2px 2px rgb(59, 58, 58);
+
+  
 }
 
+.qcard {
+  border-radius: 20px;
+
+}
+
+.qcard2 {
+  margin: 20px;
+  padding: 20px;
+}
 /* button {
   border-style: none;
   margin-bottom:5px;
@@ -91,78 +132,6 @@ button[value="0"]:disabled {
       
 }
 
-input {
-  border-top-style: none;
-border-left-style: none;
-border-right-style: none;
-border-bottom-style: solid;
-border-bottom-width: 1px;
-background: none;
-font-family: 'Special Elite', cursive;
-font-size: 15px;
-}
-
-textarea:focus, input:focus{
-  outline: none;
-  background-color: none;
-  
-}
-.form-control {
-width: 90%;
-background-color: transparent;
-font-family: 'Special Elite', cursive;
-font-size: 18px;
-border-top-style: none;
-border-left-style: none;
-border-right-style: none;
-border-bottom-style: solid;
-border-bottom-width: 1px;
-margin-top:10px;
-margin-bottom:10px;
-}
-
-input::selection{
-background-color:  transparent;
-
-}
-
-/* input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active  {
-background-color: transparent;
-} */
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-border-top-style: none;
-border-left-style: none;
-border-right-style: none;
-border-bottom-style: solid;
-border-bottom-width: 1px;
-background: none;
-/* -webkit-background-fill-color: rgb(112, 7, 21); */
--webkit-text-fill-background-color: rgb(112, 7, 21);
-/* -webkit-box-shadow: 0 0 0px 0px#000 inset; */
-transition: background-color 5000s ease-in-out 0s;
-
-}
-::-moz-selection{
-background-color:  transparent;
-} 
-.form-control::-webkit-input-placeholder { color: none; }  /* WebKit, Blink, Edge */
-
-.form-control:-moz-placeholder { color: none; }  /* Mozilla Firefox 4 to 18 */
-.form-control::-moz-placeholder { color: none; }  /* Mozilla Firefox 19+ */
-.form-control:-ms-input-placeholder { color: none; }  /* Internet Explorer 10-11 */
-.form-control::-ms-input-placeholder { color: none; }  /* Microsoft Edge */
 
 
 .questionName {
@@ -171,6 +140,18 @@ font-family: Arial, Helvetica, sans-serif;
         text-shadow: 2px 1px 5px #050505;
 }
 
+
+.AnswerButtons {
+  background-color: lightgray;
+  width:100%;
+  display: flex;
+  justify-content: center;
+  min-width: 280px;
+  width: 50%;
+  height: 40px;
+  align-items: center;
+  border-radius: 10px;
+}
 
 @media (max-width: 850px){
 
@@ -182,11 +163,6 @@ font-family: Arial, Helvetica, sans-serif;
 
 @media (device-height: 812px) and (device-width: 375px) and (-webkit-min-device-pixel-ratio: 2){
 
-  .qcard {
-    height: 300px;
-    width: 80%;
-  
-  }
 
   .closebtnquiz {
     width: 120px;
@@ -207,11 +183,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 @media (device-height: 736px) and (device-width: 414px) and (-webkit-min-device-pixel-ratio: 2){
 
-  .qcard {
-    height: 300px;
-    width: 80%;
-  
-  }
+ 
 
   .closebtnquiz {
     width: 120px;
@@ -234,11 +206,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 @media (device-height: 667px) and (device-width: 375px) and (-webkit-min-device-pixel-ratio: 2){
 
-  .qcard {
-    height: 300px;
-    width: 80%;
-  
-  }
+ 
 
   .closebtnquiz {
     width: 120px;
@@ -261,11 +229,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 
 @media (device-height: 568px) and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2){
-  .qcard {
-    height: 300px;
-    width: 80%;
-  
-  }
+ 
 
   .closebtnquiz {
     width: 120px;
@@ -286,11 +250,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 
 @media (device-height: 823px) and (device-width: 411px) and (-webkit-min-device-pixel-ratio: 2){
-  .qcard {
-    height: 300px;
-    width: 80%;
-  
-  }
+ 
 
   .closebtnquiz {
     width: 120px;
@@ -311,11 +271,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 
 @media (device-height: 731px) and (device-width: 411px) and (-webkit-min-device-pixel-ratio: 2){
-  .qcard {
-    height: 300px;
-    width: 80%;
-  
-  }
+ 
 
   .closebtnquiz {
     width: 120px;
@@ -339,11 +295,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 @media (device-height: 640px) and (device-width: 360px) and (-webkit-min-device-pixel-ratio: 2){
 
-  .qcard {
-    height: 300px;
-    width: 80%;
-  
-  }
+ 
 
   .closebtnquiz {
     width: 120px;
@@ -365,11 +317,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 
 @media (device-height: 1024px) and (device-width: 768px) and (-webkit-min-device-pixel-ratio: 2){
-  .qcard {
-    height: 300px;
-    width: 80%;
-  
-  }
+
 
   .closebtnquiz {
     width: 120px;
@@ -388,11 +336,7 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 @media (device-height: 1366px) and (device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2){
-.  .qcard {
-  height: 300px;
-  width: 80%;
 
-}
 
 .closebtnquiz {
   width: 120px;
