--- a/src/components/SavedWine/style.css
+++ b/src/components/SavedWine/style.css
@@ -16,10 +16,10 @@
         background-color: transparent;
         /* background: -webkit-gradient(linear, left top, left bottom, from(rgb(248, 252, 250)), to(rgb(102, 42, 42))) fixed; */
         z-index: 2;
-        cursor: pointer;
+        /* cursor: pointer; */
         transition-delay: 10s;
         transition-timing-function: ease-in;
-        overflow: hidden;
+        /* overflow: hidden; */
         
       }
     
@@ -42,6 +42,7 @@
      
         justify-content: space-between;
         display: flex;
+        align-content: center;
     }
     
       .fa-plus-circle {
@@ -89,14 +90,15 @@
       
       .wineinfo2{
       width: 50%;
-      height: 400px;
+      min-width: 300px;
+      /* height: 400px; */
 border-color: rgb(97, 72, 7);
 border-style:solid;
 border-width: 10px;
 background: rgb(223, 193, 119);
 border-radius: 50px;
 padding: 20px;
-overflow: auto;
+/* overflow: auto; */
       
       }
       
