--- a/src/components/Userinfo/style.css
+++ b/src/components/Userinfo/style.css
@@ -1,575 +1,41 @@
 .overlay8 {
-
   position: absolute;
-
-  width: 100%;
-  height: 100%;
+  height: 40%;
+  min-height: 350px;
+  /* height:100vh; */
+  /* height:inherit; */
+  /* min-height: 100vh; */
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  /* color: black; */
+  background-color: steelblue;
+  color: white;
+
   /* background: -webkit-gradient(linear, left top, left bottom, from(rgb(248, 252, 250)), to(rgb(102, 42, 42))) fixed; */
   z-index: 2;
-  overflow: hidden;
-
-  
-}
-
-.userinfowrapper1 {
-  /* display: flex;
-  justify-content: center; */
-  margin-top: 150px;
-  height:100%;
-}
-
-.userinfowrapper2{
-width: 20%;
-background-color: transparent;
-/* background-color: rgb(23, 65, 78, .5); */
-border-style:solid;
-border-width: 0px;
-height:100%;
-border-radius: 0px;
-justify-content: center;
-display: flex;
-color: white;
-}
-
-
-
-.userinfowrapper3{
-  width: 80%;
-  /* background: rgb(150, 142, 142); */
-  margin: 20px;
-  
-    }
-
-    .userformtext {
-      font-family: 'Special Elite', cursive;
-
-    }
-    
-    
-    
-    
-    
-    /* FONTS */
-    
-    
-    
-    .newempformtext{
-      font-family: 'Pacifico', cursive;
-    font-size: 25px;
-    margin-bottom: 20px;
-    /* font-family: 'Lobster', cursive;
-    font-family: 'Satisfy', cursive;
-    font-family: 'Special Elite', cursive;
-    font-family: 'Yellowtail', cursive;
-    font-family: 'Leckerli One', cursive;
-    font-family: 'Shrikhand', cursive;
-    font-family: 'Montez', cursive;
-    font-family: 'Sail', cursive;
-    font-family: 'Libre Barcode 128 Text', cursive;
-    font-family: 'IM Fell DW Pica SC', serif;
-    font-family: 'Zilla Slab Highlight', cursive; */
-    
-    }
-    
-    label {
-    
-      font-family: 'Satisfy', cursive;
-    font-size: 20px;
-    
-      /* 
-      font-family: 'Special Elite', cursive;
-      font-family: 'Satisfy', cursive;
-        font-family: 'IM Fell DW Pica SC', serif;
-    font-family: 'Zilla Slab Highlight', cursive; */
-    }
-    
-
-    .btnwrap1buserclose{
-      justify-content: center;
-      display: flex;
-      margin-bottom: 5px;
-    color:white;
-    margin-top: 10px;
-        background-color: transparent;
-        border-style: none;
-        /* height: 40px;
-        padding-left: 20px;
-        padding-right: 20px;
-        border-radius: 50px;
-        font-size: 15px; */
-      }
-    
-      .fa-times-circle {
-        font-size: 20px;  
-          color: white;
-      }
-    
-    .btnwrap1b:focus {
-      outline: none !important;
-    }
-    
-    button:focus {
-      outline: none !important;
-    }
-  
-    
-    .btnwrap1b:hover {
-      -ms-transform: scale(1.2); /* IE 9 */
-      -webkit-transform: scale(1.2); /* Safari 3-8 */
-      transform: scale(1.2); 
-      cursor: pointer;
-    }
-    
-    .btnwrap1awrap {
-      justify-content: space-between;
-      display: flex;
-    }
-    
-    
-.btnwrap1bclose {
-justify-content: flex-end;
-display: flex;
+  /* overflow: hidden; */
+  border-bottom-right-radius: 20px;
+  min-width: 300px;
+  width: 30%;
+  box-shadow: 2px 1px 2px rgb(49, 46, 46), 0 2px 2px rgb(59, 58, 58);
+  padding-top: 30px;
+  padding-left: 30px;
 }
 
 .btn1logoutwrap {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  padding-right: 30px;
 }
 
 .btn1logout {
-  background-color: transparent;
-  color: white;
-  border-style: solid;
-  border-width: 1px;
+  min-width: 100px;
+  height: 30px;
   border-radius: 50px;
-  height: 20px;
+  margin: 5px;
+  border: solid;
+  border-color: transparent;
+  box-shadow: 2px 1px 2px rgb(49, 46, 46), 0 2px 2px rgb(59, 58, 58);
 }
-      
-@media (max-width: 850px){
-  .overlay8 {
-    height: 70%;
-    overflow: hidden;
-
-    /* overflow: auto; */
-  }
-  
-.userinfowrapper2{
-  width: 100%;
-  background-color: rgb(100, 48, 184, 0.9);
-  /* background-color: rgb(23, 65, 78, .5); */
-  border-style:solid;
-  border-width: 0px;
-  border-bottom-left-radius:  30px;
-  border-bottom-right-radius:  20px;
-  border-radius: 0px;
-  justify-content: center;
-  display: flex;
-  color: white;
-  padding-bottom: 10px;
-  }
-
-  
-
-
-
-}
-@media (device-height: 812px) and (device-width: 375px) and (-webkit-min-device-pixel-ratio: 2){
-
-  .overlay8 {
-    height: 50%;
-    overflow: hidden;
-
-    /* overflow: auto; */
-  }
-  
-.userinfowrapper2{
-  width: 100%;
-  background-color: rgb(100, 48, 184, 0.9);
-  /* background-color: rgb(23, 65, 78, .5); */
-  border-style:solid;
-  border-width: 0px;
-  border-bottom-left-radius:  30px;
-  border-bottom-right-radius:  20px;
-  border-radius: 0px;
-  justify-content: center;
-  display: flex;
-  color: white;
-  padding-bottom: 10px;
-  }
-
-  
-
-}
-
-@media (device-height: 375px) and (device-width: 812px) and (-webkit-min-device-pixel-ratio: 2){
-
-  .btn1logoutwrap {
-    margin-bottom: 20px;
-  }
-
-  .overlay8 {
-    overflow: auto;
-  }
-
-  .userinfowrapper2{
-    width: 100%;
-    height: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    }
-
-
-  }
-
-
-  @media (device-height: 736px) and (device-width: 414px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      height: 60%;
-      overflow: hidden;
-      
-      /* overflow: auto; */
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-    
-  
-  }
-
-
-  @media (device-height: 414px) and (device-width: 736px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-
-      /* overflow: hidden; */
-      
-      overflow: auto;
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-    
-  
-  }
-  
-
-
-  @media (device-height: 667px) and (device-width: 375px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      height: 60%;
-      overflow: hidden;
-      
-      /* overflow: auto; */
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-    
-  
-  }
-
-
-  @media (device-height: 375px) and (device-width: 667px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      /* height: 60%;
-      overflow: hidden; */
-      
-      overflow: auto;
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-    
-  
-  }
-
-
-  @media (device-height: 568px) and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      height: 80%;
-      overflow: hidden;
-      
-      /* overflow: auto; */
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-    
-  
-  }
-
-  @media (device-height: 320px) and (device-width: 568px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      /* height: 60%;
-      overflow: hidden; */
-      
-      overflow: auto;
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-    
-  
-  }
-
-
-
-  @media (device-height: 823px) and (device-width: 411px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      height: 50%;
-      overflow: hidden;
-      
-      /* overflow: auto; */
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-
-  }
-
-
-  @media (device-height: 411px) and (device-width: 823px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      /* height: 80%;
-      overflow: hidden; */
-      
-      overflow: auto;
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-
-  }
-
-
-  @media (device-height: 731px) and (device-width: 411px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      height: 80%;
-      overflow: hidden;
-      
-      /* overflow: auto; */
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-  }
-
-  @media (device-height: 411px) and (device-width: 731px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      /* height: 80%;
-      overflow: hidden; */
-      
-      overflow: auto;
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-  }
-  
-
-  @media (device-height: 640px) and (device-width: 360px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      height: 65%;
-      overflow: hidden;
-      
-      /* overflow: auto; */
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184,0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-    
-  
-  }
-
-
-  @media (device-height: 360px) and (device-width: 640px) and (-webkit-min-device-pixel-ratio: 2){
-
-    .overlay8 {
-      /* height: 80%;
-      overflow: hidden; */
-      height: 100vh;
-      overflow: auto;
-    }
-    
-  .userinfowrapper2{
-    width: 100%;
-    background-color: rgb(100, 48, 184, 0.9);
-    /* background-color: rgb(23, 65, 78, .5); */
-    border-style:solid;
-    border-width: 0px;
-    border-bottom-left-radius:  30px;
-    border-bottom-right-radius:  20px;
-    border-radius: 0px;
-    justify-content: center;
-    display: flex;
-    color: white;
-    padding-bottom: 10px;
-    }
-  
-    
-  
-  }
