--- a/src/components/Userinfo/style.css
+++ b/src/components/Userinfo/style.css
@@ -37,5 +37,6 @@
   margin: 5px;
   border: solid;
   border-color: transparent;
+  background-color: rgb(219, 146, 124);
   box-shadow: 2px 1px 2px rgb(49, 46, 46), 0 2px 2px rgb(59, 58, 58);
 }
