--- a/src/components/SignupLoginForm/style.css
+++ b/src/components/SignupLoginForm/style.css
@@ -1,6 +1,6 @@
 .overlay {
 
-  position: absolute;
+  /* position: absolute; */
 
   width: 100%;
   height: 100vh;
@@ -10,9 +10,9 @@
   bottom: 0;
   background-color: rgba(253, 227, 167, 1);
   /* background: -webkit-gradient(linear, left top, left bottom, from(rgb(248, 252, 250)), to(rgb(102, 42, 42))) fixed; */
-  z-index: 2;
+  /* z-index: 2; */
   /* cursor: pointer; */
-  overflow: auto;
+  /* overflow: auto; */
   
 }
 
@@ -192,15 +192,18 @@ button:focus {
     color:white;
         background-color: rgb(190, 39, 77);
         border-style: none;
-        height: 40px;   
+        min-height: 40px;   
         padding-left: 20px;
         padding-right: 20px;
         border-radius: 50px;
-        font-size: 15px;
+        font-size: 1rem;
       }
   
-    .loginsignupbtnmain:focus {
+    .loginsignupbtnmain:focus, 
+    .loginsignupbtnmain:active {
       outline: none !important;
+      background-color: rgb(148, 54, 77);
+
     }
   
     button:focus {
@@ -208,9 +211,9 @@ button:focus {
     }
   
     .loginsignupbtnmain:hover {
-      -ms-transform: scale(1.2); /* IE 9 */
-      -webkit-transform: scale(1.2); /* Safari 3-8 */
-      transform: scale(1.2); 
+      -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+      transform: scale(1.1); 
       cursor: pointer;
     }
 
