--- a/src/components/Wine/style.css
+++ b/src/components/Wine/style.css
@@ -32,7 +32,10 @@ display: flex;
       /* background-color: rgb(187, 25, 66); */
         /* background-color: rgba(218, 73, 121, 0.8); */
       /* background-color: rgb(243, 210, 210); */
-      width: 80%;
+      
+      width: 50%;
+      max-width: 50%;
+      min-width: 300px;
       border-top-left-radius: 20px;
       border-bottom-left-radius: 20px;
       border-bottom-right-radius: 20px;
