--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,3 +1,41 @@
+  /*LANDING PAGE  */
+body {
+  height:100%;
+
+}
+
+.backToRestBtn {
+  text-align: center;
+font-family: 'Pacifico', cursive;
+
+}
+  .logoWrapper {
+    min-height:100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    /* background-color: pink; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* vertical-align: middle; */
+    text-align: center;
+ }
+
+ /* .logoWrapper .logoTanninWrapper {
+ 
+ } */
+
+ .logoTannin {
+  /* background-color: aqua; */
+  font-size: 3rem;
+color: rgb(190, 39, 77);
+font-family: 'Pacifico', cursive;
+margin: 0;
+}
+  
+  
   input::selection{
           background-color:  transparent;
         } 
